# pe-explorer-web

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
src/: flags.rs  lib.rs  pe.rs
test/: check.mjs
web/: app.js  index.html  style.css
